--- a/style.css
+++ b/style.css
@@ -34,3 +34,16 @@ p {
     font-size:175%;
     font-weight:400;
 }
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1.5s;
+}
+
+@media(prefers-reduced-motion){
+    .hidden {
+        transition: none;
+    }
+}
