--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ p {
     transition: all 1.5s;
 }
 
+.hidden-delay {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 2.5s;
+}
+
 @media(prefers-reduced-motion){
     .hidden {
         transition: none;
