--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ section {
     display: grid;
     place-items: center;
     align-content: start;
-    margin-top: 100px;
+    margin-top: 8rem;
     min-height: 100vh;
 }
 
@@ -27,8 +27,8 @@ h1 {
 }
 
 p {
-    margin-left: 200px;
-    margin-right: 200px;
+    margin-left: 12rem;
+    margin-right: 12rem;
     text-align: center;
     text-transform: capitalize;
     font-size:175%;
