--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     background-color: #1d1a1d;
     color: #ffffff;
     font-family: 'Caveat', sans-serif;
+    font-size: 100%;
     padding: 0;
     margin: 0;
 }
@@ -22,7 +23,7 @@ section {
 }
 
 h1 {
-    font-size:400%;
+    font-size:4rem;
     font-weight:700;
 }
 
@@ -31,7 +32,7 @@ p {
     margin-right: 12rem;
     text-align: center;
     text-transform: capitalize;
-    font-size:175%;
+    font-size:1.75rem;
     font-weight:400;
 }
 
@@ -55,6 +56,29 @@ p {
     }
 }
 
+@media (max-width: 700px){
+    section {
+        margin-top: 12rem;
+        min-height: 100vh;
+    }
+
+    h1 {
+        font-size:2.5rem;
+        /* font-weight:700; */
+    }
+
+    p {
+        margin-left: 4rem;
+        margin-right: 4rem;
+        font-size:1rem;
+        /* font-weight:400; */
+    }
+
+    img {
+        width:4rem;
+    }
+}
+
 .show {
     opacity: 1;
     filter: blur(0);
@@ -64,6 +88,7 @@ p {
 .logos {
     display: flex;
 }
+
 
 .logo:nth-child(n){
     transition-delay: calc(200ms * var(--order));
